--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "daisyui": "^3.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-sort": "^1.6.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3"
   },
