--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-easy-sort": "^1.6.0",
     "react-icons": "^4.11.0",
+    "react-photo-view": "^1.2.3",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
