--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-dom": "^18.2.0",
     "react-easy-sort": "^1.6.0",
     "react-icons": "^4.11.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-photo-view": "^1.2.3",
+    "react-progressive-graceful-image": "^0.7.0",
+    "react-progressive-image": "^0.6.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
